# verifySN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fasth.cpp  ui.hpp  verifysn.cpp
